<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recording">

    <TextView
        android:id="@+id/sestextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="12dp"
        android:text="@string/recording"
        android:textColor="#000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/sesicon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/sestextview"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/mikraicon" />

    <Button
        android:id="@+id/recordinginfo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@android:drawable/ic_menu_help"
        android:layout_below="@+id/grid1"
        android:layout_alignParentEnd="true"/>

    <GridLayout
        android:id="@+id/grid1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/sesicon"
        android:layout_margin="10dp"
        android:columnCount="4"
        android:rowCount="1">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardstart"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                   android:src="@android:drawable/ic_media_play" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardstop"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_media_pause"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stop"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardplay"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_rowWeight="0"
            android:layout_column="2"
            android:layout_columnWeight="2"
            android:layout_gravity="fill"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_slideshow"
                   />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/play"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardyeniden"
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_rowWeight="0"
            android:layout_column="3"
            android:layout_columnWeight="0"
            android:layout_gravity="fill"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_rotate"
                     />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/playyeniden"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </GridLayout>

    <GridLayout
        android:id="@+id/grid"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_below="@+id/grid2"
        android:layout_centerHorizontal="true"
        >
        <androidx.cardview.widget.CardView
            android:id="@+id/cardsave"
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:layout_row="0"
            android:layout_rowWeight="0"
            android:layout_column="3"
            android:layout_columnWeight="0"
            android:layout_gravity="fill"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_save"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/savebuttonname"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </GridLayout>
    <GridLayout
        android:id="@+id/grid2"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_below="@+id/grid1"
        android:layout_centerHorizontal="true"
        >
        <androidx.cardview.widget.CardView
            android:id="@+id/cardtarihvesaat"
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:layout_row="0"
            android:layout_rowWeight="0"
            android:layout_column="3"
            android:layout_columnWeight="0"
            android:layout_gravity="fill"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_day"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/tarihvesaatmenu"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </GridLayout>


</RelativeLayout>