<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".not_defteri">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardElevation="8dp"
        app:cardPreventCornerOverlap="true"
        app:contentPadding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardUseCompatPadding="true">
        <EditText
            android:id="@+id/notdefteribaslik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:drawableLeft="@drawable/soru"
            android:textStyle="bold|italic"
            android:textSize="24dp"
            android:textAllCaps="true"
            android:inputType="textCapCharacters"
            android:hint="@string/baslıkname"
            android:textColor="@android:color/holo_red_dark"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardElevation="8dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card"
        app:cardUseCompatPadding="true">
        <EditText
            android:id="@+id/notdefteribildirim"
            android:layout_width="280dp"
            android:layout_height="300dp"
            android:ems="10"
            android:drawableLeft="@drawable/dot"
            android:background="@drawable/edittextxml"
            android:textSize="20dp"
            android:inputType="textMultiLine"
            android:hint="@string/bildirimname"
            android:gravity="left"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/notdefterisave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardElevation="4dp"
        app:cardPreventCornerOverlap="true"
        app:contentPadding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card2"
        app:cardCornerRadius="4dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:gravity="center"
            android:background="#C8F4F0"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/edittextxml"
                android:src="@android:drawable/ic_menu_save"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/savebuttonname"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>